# VibrationMonitor

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  prj.conf
altium/PCB_Project/: Constraints.xml  PCB_Project.PrjPcb  PCB_Project.PrjPcbStructure  TopSheet.SchDoc
cmake/nrf5/: nrf5.cmake
cmake/toolchains/gcc/: find_gcc.cmake  gcc_arm_m4f_toolchain.cmake  gcc_arm_toolchain.cmake
cmake/toolchains/msvc/: Windows.Clang.toolchain.cmake
src/: CMakeLists.txt  accelerometer.cpp  accelerometer.h  bt.c  generic_gcc_nrf52.ld  main.cpp  nrfx_config.h  sd.cpp  sd.h  sd_card.overlay  sys.cpp
src/freertos/: FreeRTOSConfig.h  hooks.cpp
src/gcc/: sys.cpp
tools/python/: ble_scan.py
